# 1c_training_task

./: CMakeLists.txt  README.md  clean.sh
src/: main.cpp
